[gd_scene load_steps=8 format=2]

[ext_resource path="res://mainmenu.gd" type="Script" id=1]
[ext_resource path="res://assets/fonts/Kenney Blocks.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://assets/themes/theme.tres" type="Theme" id=3]
[ext_resource path="res://assets/audio/songs/cutandrun.ogg" type="AudioStream" id=4]
[ext_resource path="res://addons/CheatCoder/Codes/konamiwasd.tres" type="Resource" id=5]
[ext_resource path="res://addons/CheatCoder/CheatCodeListener.gd" type="Script" id=6]

[sub_resource type="DynamicFont" id=1]
size = 36
use_filter = true
font_data = ExtResource( 2 )

[node name="mainmenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 25.0
margin_top = -90.0
margin_right = 99.0
margin_bottom = -28.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="startbutton" type="Button" parent="VBoxContainer"]
margin_right = 74.0
margin_bottom = 20.0
theme = ExtResource( 3 )
text = "start"

[node name="optionsbutton" type="Button" parent="VBoxContainer"]
margin_top = 24.0
margin_right = 74.0
margin_bottom = 44.0
theme = ExtResource( 3 )
text = "options"

[node name="quitbutton" type="Button" parent="VBoxContainer"]
margin_top = 48.0
margin_right = 74.0
margin_bottom = 68.0
theme = ExtResource( 3 )
text = "quit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_left = 20.0
margin_top = 20.0
margin_right = 40.0
margin_bottom = 14.0
custom_fonts/font = SubResource( 1 )
text = "MELODY MIXTAPE"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="menumusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -9.579
autoplay = true

[node name="CheatCodeListener" type="Node" parent="."]
script = ExtResource( 6 )
allow_mistakes = true
timeout_delay = 8.0
repeat = true
repeat_cooldown = 0.0
code = ExtResource( 5 )
[connection signal="pressed" from="VBoxContainer/startbutton" to="." method="_on_startbutton_pressed"]
[connection signal="pressed" from="VBoxContainer/optionsbutton" to="." method="_on_optionsbutton_pressed"]
[connection signal="pressed" from="VBoxContainer/quitbutton" to="." method="_on_quitbutton_pressed"]
[connection signal="cheat_activated" from="CheatCodeListener" to="." method="_on_CheatCodeListener_cheat_activated"]
